<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ReceiveCodeActivity_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceiveCodeActivity">

    <com.arashforus.nearroom.Background_particle
        android:id="@+id/background_particle3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/ReceiveCodeActivity_CardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/first_pages_card_margin_start"
                android:layout_marginTop="@dimen/first_pages_card_margin_top"
                android:layout_marginEnd="@dimen/first_pages_card_margin_end"
                android:layout_marginBottom="@dimen/first_pages_card_margin_bottom"
                android:alpha="@dimen/first_pages_card_alpha"
                app:cardCornerRadius="@dimen/first_pages_card_corner"
                app:cardElevation="@dimen/first_pages_card_elevation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ReceiveCodeActivity_CardLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/first_pages_inner_layout_padding">

                    <TextView
                        android:id="@+id/ReceiveCodeActivity_DescriptionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:gravity="center"
                        android:text="@string/receive_code_decription"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/ReceiveCodeActivity_ChangeNumberTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:linksClickable="true"
                        android:text="@string/receive_code_change_number"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ReceiveCodeActivity_DescriptionText" />

                    <com.mukesh.OtpView
                        android:id="@+id/ReceiveCodeActivity_Code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:inputType="number"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:OtpItemCount="6"
                        app:OtpLineColor="@color/colorPrimaryDark"
                        app:OtpViewType="line"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ReceiveCodeActivity_ChangeNumberTextView"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/ReceiveCodeActivity_Timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:ems="10"
                        android:text="01:30"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ReceiveCodeActivity_Code" />

                    <TextView
                        android:id="@+id/ReceiveCodeActivity_SendAgain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:linksClickable="true"
                        android:text="@string/receive_code_send_again"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ReceiveCodeActivity_Timer" />

                    <TextView
                        android:id="@+id/ReceiveCodeActivity_Result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="Incorrect code , Try again"
                        android:textColor="@color/buttonNegetive"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ReceiveCodeActivity_SendAgain" />

                    <Button
                        android:id="@+id/ReceiveCodeActivity_NextButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/receive_code_next_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ReceiveCodeActivity_Result" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>