<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignupActivity_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <com.arashforus.nearroom.Background_particle
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:id="@+id/SignupActivity_CardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/first_pages_card_margin_start"
                android:layout_marginTop="@dimen/first_pages_card_margin_top"
                android:layout_marginEnd="@dimen/first_pages_card_margin_end"
                android:layout_marginBottom="@dimen/first_pages_card_margin_bottom"
                android:alpha="@dimen/first_pages_card_alpha"
                app:cardCornerRadius="@dimen/first_pages_card_corner"
                app:cardElevation="@dimen/first_pages_card_elevation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ScrollView
                    android:id="@+id/SignupActivity_ScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/SignupActivity_CardLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/first_pages_inner_layout_padding">

                        <TextView
                            android:id="@+id/SignupActivity_Descrption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="15dp"
                            android:text="@string/signup_decription"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/Signup_CountryFlag"
                            android:layout_width="40dp"
                            android:layout_height="30dp"
                            android:visibility="gone"
                            app:srcCompat="@drawable/flag_iran" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/Signup_Country_Layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <EditText
                                android:id="@+id/Signup_Country"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:enabled="false"
                                android:hint="Country"
                                android:inputType="textPersonName" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/Signup_PhoneNumber_Layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <EditText
                                android:id="@+id/Signup_PhoneNumberEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:enabled="false"
                                android:hint="Phone number"
                                android:inputType="phone" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/SignupActivity_UsernameLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:errorEnabled="true">

                            <EditText
                                android:id="@+id/SignupActivity_Username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="44dp"
                                android:ems="10"
                                android:hint="Username"
                                android:inputType="textPersonName" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/SignupActivity_FullnameLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">

                            <EditText
                                android:id="@+id/SignupActivity_FullName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="Full name"
                                android:inputType="textPersonName"
                                android:maxLength="40" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/SignupActivity_EmailLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">

                            <EditText
                                android:id="@+id/SignupActivity_Email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="Email Address"
                                android:inputType="textEmailAddress"
                                android:maxLength="40" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/SignupActivity_BirthyearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">

                            <EditText
                                android:id="@+id/SignupActivity_Birthyear"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="Birth year"
                                android:inputType="number"
                                android:maxLength="4" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/SignupActivity_PasswordLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">

                            <EditText
                                android:id="@+id/SignupActivity_Password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="Password"
                                android:inputType="textPassword"
                                android:maxLength="30" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/SignupActivity_RetypePasswordLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">

                            <EditText
                                android:id="@+id/SignupActivity_RetypePassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="Retype Password"
                                android:inputType="textPassword"
                                android:maxLength="30" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <CheckBox
                            android:id="@+id/SignupActivity_CheckTerms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/signup_check_terms" />

                        <Button
                            android:id="@+id/SignupActivity_SignupButton"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:text="@string/signup_button" />
                    </LinearLayout>
                </ScrollView>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>